tests/runtime/invalid/imports.wit
roundtrip-u8: function(a: u8) -> u8
roundtrip-s8: function(a: s8) -> s8
roundtrip-u16: function(a: u16) -> u16
roundtrip-s16: function(a: s16) -> s16
roundtrip-char: function(a: char) -> char

enum e { a, b, c }
roundtrip-enum: function(a: e) -> e

roundtrip-bool: function(a: bool) -> bool

resource host-state
get-internal: function(a: host-state) -> u32
